src/command/auth/grants/revoke/snapshots/rover__command__auth__grants__revoke__output__tests__json_envelope_for_a_declined_prompt_snapshot.snap
---
source: src/command/auth/grants/revoke/output.rs
expression: "JsonOutput::from(&output)"
---
{
  "json_version": "1",
  "data": {
    "organization_id": "acme",
    "user_id": "user-123",
    "user_is_member": true,
    "clients": [],
    "cancelled": true,
    "success": true
  },
  "error": null
}
