src/command/auth/grants/revoke/snapshots/rover__command__auth__grants__revoke__output__tests__json_envelope_for_a_full_sweep_snapshot.snap
---
source: src/command/auth/grants/revoke/output.rs
expression: "JsonOutput::from(&output)"
---
{
  "json_version": "1",
  "data": {
    "organization_id": "acme",
    "user_id": "user-123",
    "user_is_member": true,
    "clients": [
      {
        "client_id": "rover",
        "name": "Rover",
        "kind": "rover",
        "outcome": "revoked",
        "error": null
      },
      {
        "client_id": "c_8f2a",
        "name": "ci-deploy",
        "kind": "client_credentials",
        "outcome": "revoked",
        "error": null
      },
      {
        "client_id": "c_91be",
        "name": "nightly-checks",
        "kind": "client_credentials",
        "outcome": "revoked",
        "error": null
      }
    ],
    "cancelled": false,
    "success": true
  },
  "error": null
}
