src/command/auth/grants/revoke/snapshots/rover__command__auth__grants__revoke__output__tests__text_reports_every_clients_outcome.snap
---
source: src/command/auth/grants/revoke/output.rs
expression: strip_ansi_codes(&one_failed().text())
---
┌────────────────┬───────────┬─────────┐
│ Client         ┆ Client ID ┆ Outcome │
╞════════════════╪═══════════╪═════════╡
│ Rover          ┆ rover     ┆ revoked │
├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌┤
│ ci-deploy      ┆ c_8f2a    ┆ revoked │
├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌┤
│ nightly-checks ┆ c_91be    ┆ failed  │
└────────────────┴───────────┴─────────┘
